--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Tasks</h1>
+    {% for task in tasks %}
+    <p>{{ task }} - {{ task.done }}</p>
+    {% endfor %}
+    <hr>
+    <form method=POST>
+        {% csrf_token %}
+        {{ add_task_form.as_p }}
+        <button type="submit">Add Task</button>
+
+    </form>
 </body>
 </html>
