--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -9,13 +9,14 @@
     <h1>Tasks</h1>
     {% for task in tasks %}
     <p>{{ task }} - {{ task.done }}</p>
+    <a href="/toggle/{{ task.id }}"><button>Toggle</button></a>
+    <a href="/delete/{{ task.id }}"><button>Delete Item</button></a>
     {% endfor %}
     <hr>
     <form method=POST>
         {% csrf_token %}
         {{ add_task_form.as_p }}
         <button type="submit">Add Task</button>
-
     </form>
 </body>
 </html>
