adding different colour backgrounds

--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -9,7 +9,7 @@
     <title>Tasks | Django</title>
 </head>
  <body>
-    <div class="container-fluid page-container">
+    <div class="container-fluid page-container theme-yellow">
         <div class="row no-gutters">
             <div class="col-10 col-offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 bg-white">
                 <div class="text-center py-4">
