--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,42 @@ body {
 /* backgrounds */
 .page-container {
     min-height: 100vh;
-    background-image: url("https://images.unsplash.com/photo-1566026723606-8ee2b0a0b0d4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80");
     background-size: cover;
     background-repeat: no-repeat;
+} 
+.theme-red {
+    background-image: url("https://images.unsplash.com/photo-1552688419-9949ce9dd731?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+.theme-pink {
+    background-image: url("https://images.unsplash.com/photo-1503455637927-730bce8583c0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+.theme-orange {
+    background-image: url("https://images.unsplash.com/photo-1519017920617-b77f448b702b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80");
+}
+.theme-yellow {
+    background-image: url("https://images.unsplash.com/photo-1522781063645-d5e4fb3e19aa?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=967&q=80");
+}
+.theme-green {
+    background-image: url("https://images.unsplash.com/photo-1566807387450-b74aea0e727e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+}
+.theme-blue {
+    background-image: url("https://images.unsplash.com/photo-1464802686167-b939a6910659?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1033&q=80");
+}
+.theme-teal {
+    background-image: url("https://images.unsplash.com/photo-1551043047-1d2adf00f3fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+}
+.theme-purple {
+    background-image: url("https://images.unsplash.com/photo-1594284487150-54d64729129c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+.theme-grey {
+    background-image: url("https://images.unsplash.com/photo-1502947830258-6ad0b35bb348?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+.theme-black {
+    background-image: url("https://images.unsplash.com/photo-1592342632531-6f60a2576ab8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+.theme-white {
+    background-image: url("https://images.unsplash.com/photo-1600024756649-a20bc91adfbb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+.theme-rainbow {
+    background-image: url("https://images.unsplash.com/photo-1587586291914-bdbe84ec1416?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
 } 
