--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,13 +3,17 @@ body {
     padding: 0px;
     margin: 0px;
 }
-
-/* backgrounds */
+/* element containers */
 .page-container {
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
 } 
+.tasks-container {
+    min-height: 100vh;
+    background-color: #f4f4f4;
+}
+/* backgrounds */
 .theme-red {
     background-image: url("https://images.unsplash.com/photo-1552688419-9949ce9dd731?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
 }
@@ -46,3 +50,9 @@ body {
 .theme-rainbow {
     background-image: url("https://images.unsplash.com/photo-1587586291914-bdbe84ec1416?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
 } 
+
+/* images */
+.colour-img {
+    height: 12vh;
+    width: 100%;
+}
