--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -1,16 +1,78 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Tasks | Django</title>
-</head>
- <body>
-    <!-- colour theme modal -->
-    <div class="modal fade" id="colourThemeModal" tabindex="-1" role="dialog" aria-labelledby="colourThemeModal" aria-hidden="true">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <title>Django TaskManager</title>
+    </head>
+    <body class="p-0 m-0">
+        <!-- colour theme modal -->
+        <div class="modal fade" id="colourThemeModal" tabindex="-1" role="dialog" aria-labelledby="colourThemeModal" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="d-flex justify-content-end">
+                        <button class="btn pb-0 pt-1" data-dismiss="modal" aria-label="Close">
+                            <i class="fas fa-times text-muted pb-0"></i>
+                        </button>
+                    </div>
+                <div class="modal-header pt-0">
+                <h5 class="modal-title text-muted display-6">Colour Theme</h5>
+                </div>
+            <div class="modal-body">
+                <div class="row no-gutters">
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1552688419-9949ce9dd731?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="red" alt="red" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1503455637927-730bce8583c0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="pink" alt="pink" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1519017920617-b77f448b702b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80" id="orange" alt="orange" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1522781063645-d5e4fb3e19aa?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=967&q=80" id="yellow" alt="yellow" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1566807387450-b74aea0e727e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" id="green" alt="green" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1464802686167-b939a6910659?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1033&q=80" id="blue" alt="blue" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1551043047-1d2adf00f3fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" id="teal" alt="teal" class="colour-img my-2">
+                    </div>    
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1594284487150-54d64729129c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="purple" alt="purple" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1502947830258-6ad0b35bb348?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="grey" alt="grey" class="colour-img my-2">
+                    </div>
+                <div class="col-3">
+                    <img src="https://images.unsplash.com/photo-1592342632531-6f60a2576ab8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="black" alt="black" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1600024756649-a20bc91adfbb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="white" alt="white" class="colour-img my-2">
+                    </div>
+                    <div class="col-3">
+                        <img src="https://images.unsplash.com/photo-1587586291914-bdbe84ec1416?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" id="rainbow" alt="rainbow" class="colour-img my-2">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <form method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="colour" value="green" id="newColour">
+                    <button type="submit" value="submit" class="btn btn-secondary text-uppercase spaced-1 px-5">Save</button>
+                </form>
+            </div>
+            </div>
+            </div>
+        </div>
+        <!-- add task modal -->
+        <div class="modal fade" id="addTaskModal" tabindex="-1" role="dialog" aria-labelledby="addTaskModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="d-flex justify-content-end">
@@ -18,102 +80,89 @@
                         <i class="fas fa-times text-muted pb-0"></i>
                     </button>
                 </div>
-            <div class="modal-header pt-0">
-            <h5 class="modal-title text-muted display-6">Colour Theme</h5>
+                <div class="modal-header pt-0">
+                    <h5 class="modal-title text-muted display-6 text-uppercase spaced-2"><small>Add Task</small></h5>
+                </div>
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="modal-body text-uppercase spaced-2">
+                    {{ add_form.as_p }}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-secondary px-5 text-uppercase spaced-1" value="submit">Add</button>
+                    </div>
+                </form>
             </div>
-        <div class="modal-body">
+        </div>
+        </div>
+        <!--body-->
+        <div class="container-fluid page-container theme-{{ colour }}">
             <div class="row no-gutters">
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1552688419-9949ce9dd731?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="red" alt="red" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1503455637927-730bce8583c0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="pink" alt="pink" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1519017920617-b77f448b702b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80" id="orange" alt="orange" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1522781063645-d5e4fb3e19aa?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=967&q=80" id="yellow" alt="yellow" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1566807387450-b74aea0e727e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" id="green" alt="green" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1464802686167-b939a6910659?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1033&q=80" id="blue" alt="blue" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1551043047-1d2adf00f3fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" id="teal" alt="teal" class="colour-img my-2">
-                </div>    
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1594284487150-54d64729129c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="purple" alt="purple" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1502947830258-6ad0b35bb348?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="grey" alt="grey" class="colour-img my-2">
-                </div>
-            <div class="col-3">
-                <img src="https://images.unsplash.com/photo-1592342632531-6f60a2576ab8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="black" alt="black" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1600024756649-a20bc91adfbb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" id="white" alt="white" class="colour-img my-2">
-                </div>
-                <div class="col-3">
-                    <img src="https://images.unsplash.com/photo-1587586291914-bdbe84ec1416?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" id="rainbow" alt="rainbow" class="colour-img my-2">
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <form method="POST">
-                {% csrf_token %}
-                <input type="hidden" name="colour" value="green" id="newColour">
-                <button type="submit" value="submit" class="btn btn-secondary text-uppercase spaced-1 px-5">Save</button>
-            </form>
-        </div>
-        </div>
-        </div>
-    </div>
-    <div class="container-fluid page-container theme-{{colour}}">
-        <div class="row no-gutters">
-            <div class="col-10 col-offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 bg-white tasks-container">
-                <div class="text-center py-4">
+                <div class="col-10 col-offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 tasks-container">
                     <div class="d-flex justify-content-end pt-2">
                         <button class="btn" data-toggle="modal" data-target="#colourThemeModal">
                             <i class="fas fa-palette text-muted" data-toggle="tooltip" data-placement="top" title="Change Colour Theme"></i>
                         </button>
                     </div>
-                    <h1 class="display-4 text-uppercase">Tasks</h1>
-                </div>
-                <div>
-                    <h2 class="lead"><bold>All Tasks</bold></h2>
-                </div>
-                {% for task in tasks %}
-                <div class="card mb-2">
-                    <div class="card-body">
-                        {% if task.done %}
-                        <a href="/toggle/{{ task.id }}"><i class="far fa-check-square text-success"></i></a>
-                        {% else %}
-                        <a href="/toggle/{{ task.id }}"><i class="far fa-square text-warning"></i></a>
-                        {% endif %}
-                        <p class="m-0 p-0 d-inline lead">{{ task.name }}</p>
-                        <div class="text-right d-inline">
-                        <a href="/edit/{{ task.id }}"><i class="fas fa-edit text-muted"></i></a>
-                        <a href="/delete/{{ task.id }}"><i class="fas fa-trash text-muted"></i></a>
+                    <div>
+                        <h1 class="display-4 text-center pt-2 pb-4 text-muted text-uppercase spaced-2"><small>Tasks</small></h1>
+                    </div>
+                    <div>
+                        <div class="dropdown">
+                            <button class="btn lead text-uppercase spaced-2 mt-4 mb-1 px-0 text-muted" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {{ filter }} Tasks ({{items | length }}) <i class="fas fa-chevron-down"></i>
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item text-muted text-uppercase spaced-1" href="{% url 'tasks' %}"><small>All</small></a>
+                                <a class="dropdown-item text-muted text-uppercase spaced-1" href="{% url 'tasks' %}?complete"><small>Complete</small></a>
+                                <a class="dropdown-item text-muted text-uppercase spaced-1" href="{% url 'tasks' %}?incomplete"><small>Incomplete</small></a>
+                                <a class="dropdown-item text-muted text-uppercase spaced-1" href="{% url 'tasks' %}?urgent"><small>Urgent</small></a>
+                            </div>
+                        </div>               
+                    </div>
+                    {% for item in items %}
+                    <div class="card mb-2">
+                        <div class="card-body">
+                            <form method="POST" class="d-flex justify-content-between">
+                            {% csrf_token %}
+                                <div class="d-inline">
+                                    {% if item.done %}
+                                    <a href="/toggle/{{ item.id }}"><i class="far fa-check-square text-success px-2"></i></a>
+                                    {% else %}
+                                    {% if item.urgent %}
+                                    <a href="/toggle/{{ item.id }}" class="px-1"><i class="fas fa-exclamation text-danger px-2"></i></a>
+                                    {% else %}
+                                    <a href="/toggle/{{ item.id }}"><i class="far fa-square text-warning px-2"></i></a>
+                                    {% endif %}
+                                    {% endif %}
+                                    <input type="text" required class="card-input m-0 px-2 d-inline lead text-uppercase spaced-1 border-0" value="{{ item.name }}" id="{{item.name}}" name="taskNewName" >
+                                </div>
+                                <div class="d-none update-task-btn d-inline">
+                                    <input type="hidden" name="taskId" id="taskID" value="{{ item.id }}">
+                                    <button class="btn btn-sm btn-secondary px-2 text-uppercase spaced-1" type="submit" value="submit">Update</button>
+                                </div>
+                                <div class="card-btns">
+                                    <a href="/delete/{{ item.id }}"><i class="fas fa-trash text-muted"></i></a>
+                                </div>
+                            </form>
                         </div>
                     </div>
-                </div>
-                {% endfor %}
-                <div class="card mb-2">
-                    <div class="card-body">
-                        <a href="/add"><i class="fas fa-plus text-info"></i></a>
-                        <p class="m-0 p-0 d-inline lead">Add a Task</p>
+                    {% endfor %}
+                    <!-- card triggers add task modal -->
+                    <div class="card mb-2">
+                        <div class="card-body" data-toggle="modal" data-target="#addTaskModal">
+                            <i class="fas fa-plus text-info px-2"></i>
+                            <p class="m-0 p-0 d-inline lead text-uppercase spaced-1"><small>Add a Task</small></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
-    <script src="https://kit.fontawesome.com/7268da00b7.js" crossorigin="anonymous"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-</body>
+        <!-- js scripts-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
+        <script src="https://kit.fontawesome.com/7268da00b7.js" crossorigin="anonymous"></script>
+        <script src="{% static 'js/script.js' %}"></script>
+    </body>
 </html>
