--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -86,7 +86,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     <div class="modal-body text-uppercase spaced-2">
-                    {{ add_form.as_p }}
+                    {{ add_task_form.as_p }}
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-secondary px-5 text-uppercase spaced-1" value="submit">Add</button>
