switching cursor to pointer over add task card

--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -150,9 +150,9 @@
                     {% endfor %}
                     <!-- card triggers add task modal -->
                     <div class="card mb-2">
-                        <div class="card-body" data-toggle="modal" data-target="#addTaskModal">
+                        <div class="card-body" id="add-task-card" data-toggle="modal" data-target="#addTaskModal">
                             <i class="fas fa-plus text-info px-2"></i>
-                            <p class="m-0 p-0 d-inline lead text-uppercase spaced-1"><small>Add a Task</small></p>
+                            <p class="m-0 p-0 d-inline lead text-uppercase spaced-1" id="add-task-p"><small>Add a Task</small></p>
                         </div>
                     </div>
                 </div>
