--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -19,7 +19,7 @@
                         </button>
                     </div>
                 <div class="modal-header pt-0">
-                <h5 class="modal-title text-muted display-6">Colour Theme</h5>
+                <h5 class="modal-title text-muted display-6 text-uppercase spaced-2">Colour Theme</h5>
                 </div>
             <div class="modal-body">
                 <div class="row no-gutters">
