addling small col offset for sm screens

--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -98,7 +98,7 @@
         <!--body-->
         <div class="container-fluid page-container theme-{{ colour }}">
             <div class="row no-gutters">
-                <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 tasks-container">
+                <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 tasks-container">
                     <div class="d-flex justify-content-end pt-2">
                         <button class="btn" data-toggle="modal" data-target="#colourThemeModal">
                             <i class="fas fa-palette text-muted" data-toggle="tooltip" data-placement="top" title="Change Colour Theme"></i>
