--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -98,7 +98,7 @@
         <!--body-->
         <div class="container-fluid page-container theme-{{ colour }}">
             <div class="row no-gutters">
-                <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 tasks-container">
+                <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 tasks-container">
                     <div class="d-flex justify-content-end pt-2">
                         <button class="btn" data-toggle="modal" data-target="#colourThemeModal">
                             <i class="fas fa-palette text-muted" data-toggle="tooltip" data-placement="top" title="Change Colour Theme"></i>
@@ -127,12 +127,12 @@
                             {% csrf_token %}
                                 <div class="d-inline">
                                     {% if task.done %}
-                                    <a href="/toggle/{{ task.id }}"><i class="far fa-check-square text-success px-2"></i></a>
+                                    <a href="/toggle/{{ task.id }}"><i class="far fa-check-square text-success px-md-2"></i></a>
                                     {% else %}
                                     {% if task.urgent %}
-                                    <a href="/toggle/{{ task.id }}" class="px-1"><i class="fas fa-exclamation text-danger px-2"></i></a>
+                                    <a href="/toggle/{{ task.id }}" class="px-1"><i class="fas fa-exclamation text-danger px-md-2"></i></a>
                                     {% else %}
-                                    <a href="/toggle/{{ task.id }}"><i class="far fa-square text-warning px-2"></i></a>
+                                    <a href="/toggle/{{ task.id }}"><i class="far fa-square text-warning px-md-2"></i></a>
                                     {% endif %}
                                     {% endif %}
                                     <input type="text" required class="card-input m-0 px-2 d-inline lead text-uppercase spaced-1 border-0" value="{{ task.name }}" id="{{task.name}}" name="taskNewName" >
